update comments apparences in courses + Indication when above buttons

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,17 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.notes-container{
+    display: flex;
+    flex-direction: column;
+    max-height: 30px;
+    border: 1px solid #cecece;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px 0px 5px 0px;
+    font-size: small;
+    overflow: auto;
+}
 .container {
     max-width: 800px;
     margin: 50px  auto;
@@ -15,7 +25,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2 {
+h1 {
     text-align: center;
 }
 
@@ -28,7 +38,7 @@ h1, h2 {
 .add-course input {
     width: 300px;
     padding: 10px;
-    border: 2px solid #ccc;
+    border: 2px solid #adadad;
     border-radius: 4px;
     font-size: small;
 }
@@ -56,10 +66,10 @@ h1, h2 {
 .course {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
     margin-bottom: 10px;
-    padding: 5px 10px 5px 10px;
-    border: 1px solid #ddd;
+    padding: 5px 10px 5px 15px;
+    border: 1px solid #adadad;
     border-radius: 4px;
     background-color: #fff;
 }
@@ -73,7 +83,7 @@ h1, h2 {
 }
 
 .course .play-btn {
-    padding: 5px 10px;
+    padding: 7px 13px;
     margin-right: 20px;
     margin-top: 6px;
     margin-bottom: 7px;
@@ -83,10 +93,11 @@ h1, h2 {
     transition: transform 0.3s ease;
     background-color: #007bff;
     color: white;
+    font-weight: bold;
 }
 
 .course .stop-btn {
-    padding: 5px 10px;
+    padding: 7px 13px;
     margin-right: 20px;
     margin-top: 6px;
     margin-bottom: 7px;
@@ -96,6 +107,7 @@ h1, h2 {
     transition: transform 0.3s ease;
     background-color: #dc3545;
     color: white;
+    font-weight: bold;
 }
 
 .course .play-btn:hover {
@@ -122,7 +134,7 @@ h1, h2 {
     margin-top: 20px;
 }
 .add-notes-btn{
-    padding: 5px 10px;
+    padding: 7px 13px;
     margin-right: 20px;
     margin-top: 6px;
     margin-bottom: 7px;
@@ -130,8 +142,9 @@ h1, h2 {
     border-radius: 4px;
     cursor: pointer;
     transition: transform 0.3s ease;
-    background-color: #ffc107;
+    background-color: #f8be0f;
     color: white;
+    font-weight: bold;
 }
 .add-notes-btn:hover {
     background-color: #ffca2c;
@@ -195,7 +208,7 @@ h1, h2 {
     font-size: 25px;
     font-weight: bold;
     margin-left: 15px;
-    padding: 0px 5px 0px 5px;
+    padding: 2px 5px 0px 5px;
     top: 0px;
 }
 .close-course:hover,
