--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,13 @@ h1 {
     padding: 5px 10px 5px 15px;
     border: 1px solid #adadad;
     border-radius: 4px;
-    background-color: #fff;
+    background: #fff;
+}
+.course:hover {
+    background:#f6f6f6;
+}
+.course:hover .close-course{
+    background:#f6f6f6;
 }
 
 .course h3 {
@@ -257,6 +263,52 @@ h1 {
     from {transform: scale(0)} 
     to {transform: scale(1)}
   }
+
+.label{
+    position: absolute;
+    width: 38px;
+    height: 20px;;
+    border-radius: 30px;
+    background-color: rgb(196, 196, 196);
+    cursor: pointer;
+}
+.input{
+    visibility: hidden;
+}
+
+.circle{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    top: 2.5px;
+    left: 2.5px;
+    animation: toggleOff 0.4s linear forwards;
+}
+.input:checked + .label {
+    background-color: rgb(180, 180, 180);
+}
+.input:checked + .label .circle{
+    animation: toggleOn 0.4s linear forwards;
+    background-color: rgb(0, 0, 0);
+}
+@keyframes toggleOn{
+    0%{
+        transform: translate(0);
+    }
+    100%{
+        transform: translate(18px);
+    }
+}
+@keyframes toggleOff{
+    0%{
+        transform: translate(18px);
+    }
+    100%{
+        transform: translate(0);
+    }
+}
 @media (max-width: 850px) {
     .container {
         height: 100%;
