--- a/styles.css
+++ b/styles.css
@@ -291,11 +291,12 @@ h1 {
 
 .label{
     position: absolute;
-    width: 38px;
-    height: 20px;;
+    width: 60px;
+    height: 30px;
     border-radius: 30px;
     border: 1px solid rgb(196, 196, 196);
     background-color: rgb(210, 210, 210);
+    transform: translate(-20px, -15px);
     cursor: pointer;
 }
 .input{
@@ -304,8 +305,8 @@ h1 {
 
 .circle{
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 25px;
+    height: 25px;
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
     top: 2.5px;
@@ -324,12 +325,12 @@ h1 {
         transform: translate(0);
     }
     100%{
-        transform: translate(18px);
+        transform: translate(30px);
     }
 }
 @keyframes toggleOff{
     0%{
-        transform: translate(18px);
+        transform: translate(30px);
     }
     100%{
         transform: translate(0);
@@ -359,6 +360,9 @@ h1 {
 @media (max-width: 500px) {
     .container {
         height: 100%;
+        margin: 0;
+        border-radius: 0;
+        border: none;
     }
     .add-course input {
         width: 200px;
@@ -383,11 +387,13 @@ h1 {
     }
     .close-course{
         padding: 0;
-        transform: translate(-6px, -34px);
+        transform: translate(-6px, -36px);
     }
     .course {
         flex-direction: column;
         align-items: flex-start;
+        margin-bottom: 13px;
+        box-shadow: 0px 0px 0px var(--shadow-color);
     }
 
     .course h3 {
@@ -396,5 +402,9 @@ h1 {
     }
     .time-info{
         width: 100%;
+    }
+    #popupButton{
+        font-size: 25px;
+        padding: 0px 18px 0px 18px;
     }
 }
