--- a/styles.css
+++ b/styles.css
@@ -358,8 +358,6 @@ h1 {
     background-color: rgb(30, 30, 30);
 }
 #link-mail{
-    /* color: #007bff; */
-    text-decoration: none;
     text-decoration: none;
     color:rgb(122, 122, 122);
     font-size:7px;
@@ -457,5 +455,10 @@ h1 {
     #popupButton{
         font-size: 25px;
         padding: 0px 18px 0px 18px;
+    }
+    #link-mail{
+        font-size:5px;
+        color:rgb(122, 122, 122);
+        text-decoration: none;
     }
 }
