--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
 .time{
     font-weight: bold;
     font-size: large;
+    cursor: pointer;
 }
 h1 {
     text-align: center;
@@ -122,7 +123,7 @@ h1 {
 
 .course .play-btn {
     padding: 8px 17px 8px 17px; ;
-    margin-right: 20px;
+    margin-right: 15px;
     margin-top: 5px;
     margin-bottom: 5px;
     border: none;
@@ -136,7 +137,7 @@ h1 {
 
 .course .stop-btn {
     padding: 8px 17px 8px 17px; ;
-    margin-right: 20px;
+    margin-right: 15px;
     margin-top: 5px;
     margin-bottom: 5px;
     border: none;
@@ -172,8 +173,8 @@ h1 {
     margin-top: 20px;
 }
 .add-notes-btn{
-    padding: 8px 15px 8px 15px; ;
-    margin-right: 25px;
+    padding: 8px 15px 8px 15px;
+    margin-right: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
     border: none;
@@ -384,7 +385,7 @@ h1 {
         transform: translate(0);
     }
 }
-@media (max-width: 850px) {
+@media (max-width: 890px) {
     .container {
         height: 100%;
     }
@@ -396,7 +397,17 @@ h1 {
         flex-direction: column;
         align-items: flex-start;
     }
-
+    .course .play-btn{
+        margin-right: 25px;
+    }
+    .course .stop-btn{
+        padding: 9px 19px 9px 19px;
+        margin-right: 25px;
+    }
+    .add-notes-btn{
+        padding: 9px 17px 9px 17px;
+        margin-right: 25px;
+    }
     .course h3 {
         margin-bottom: 10px;
         max-width: 100%;
@@ -405,7 +416,7 @@ h1 {
         width: 100%;
     }
 }
-@media (max-width: 600px) {
+@media (max-width: 570px) {
     .container {
         height: 100%;
         margin: 0;
