--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     --table-color: #333333;
     --tr-color:rgb(235, 235, 235);
     --tr-title-color:rgb(205, 205, 205);
-    --td-color:rgb(215, 235, 255);
+    --td-color:rgb(210, 235, 255);
   }
 .notes-container{
     display: flex;
@@ -302,7 +302,7 @@ table th {
 }
 .statistics {
     color: var(--stats-color);
-    font-size: 14px;
+    font-size: 15px;
     font-weight: bold;
     background-color: var(--stats-back-color);
     box-shadow: 0px 1px 4px var(--shadow-color2);
@@ -437,6 +437,10 @@ table th {
     }
     table{
         font-size: 14px;
+    }
+    .close-course{
+        padding: 0;
+        translate: -6px -36px; ;
     }
 }
 @media (max-width: 570px) {
